@@ -3,6 +3,7 @@ ver 0.18.1 (2013/11/??)
   - always ignore whitespace at the end of the line
 * networking:
   - log UNIX domain path names instead of "localhost"
+  - open listener sockets in the order they were configured
 * filter:
   - autoconvert: fix "volume_normalization" with mp3 files
 * add missing files to source tarball
